Fixed serde empty list/sorted bag issue